fractional gaps fixed

--- a/blocks/photo-grid/__gallery/photo-grid__gallery.css
+++ b/blocks/photo-grid/__gallery/photo-grid__gallery.css
@@ -22,7 +22,7 @@
   .photo-grid__gallery {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    row-gap: 11.4px;
+    row-gap: 11px;
   }
 }
 
@@ -30,6 +30,6 @@
   .photo-grid__gallery {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
-    row-gap: 7.51px;
+    row-gap: 7px;
   }
 }
