--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -23,6 +23,6 @@
   .photo-grid {
     max-width: 288px;
     padding-top: 64px;
-    padding-bottom: 60px;
+    padding-bottom: 65px;
   }
 }
